[package]
name = "backend_wesleysoto_dev-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
env_logger = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "backend_wesleysoto_dev"
path = "src/main.rs"
