[package]
name = "backend_wesleysoto_dev-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'  # or 's'
lto = true

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
log = "0.4"
# reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "backend_wesleysoto_dev"
path = "src/main.rs"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]